--- a/ui/package.json
+++ b/ui/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^5.15.12",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
