--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.12",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.5",
     "jspdf": "^3.0.1",
