--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.5",
     "jspdf": "^3.0.1",
